output/tpc-h/2026-02-18T08-31-17/generated_ingest/build.log
g++ -O2 -std=c++17 -Wall -lpthread -o ingest ingest.cpp
ingest.cpp: In function ‘int64_t parse_decimal(const string&, int)’:
ingest.cpp:56:57: error: ‘pow’ was not declared in this scope
   56 |         return std::stoll(value) * static_cast<int64_t>(pow(10, scale_factor));
      |                                                         ^~~
ingest.cpp:62:34: warning: comparison of integer expressions of different signedness: ‘std::__cxx11::basic_string<char>::size_type’ {aka ‘long unsigned int’} and ‘int’ [-Wsign-compare]
   62 |     while (decimal_part.length() < scale_factor) {
      |            ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
ingest.cpp:67:70: error: ‘pow’ was not declared in this scope
   67 |     int64_t result = std::stoll(integer_part) * static_cast<int64_t>(pow(10, scale_factor));
      |                                                                      ^~~
ingest.cpp: In instantiation of ‘ColumnWriter<T>::ColumnWriter(const string&, size_t) [with T = int; std::string = std::__cxx11::basic_string<char>; size_t = long unsigned int]’:
ingest.cpp:152:77:   required from here
ingest.cpp:139:12: warning: ‘ColumnWriter<int>::buffer_size’ will be initialized after [-Wreorder]
  139 |     size_t buffer_size;
      |            ^~~~~~~~~~~
ingest.cpp:138:23: warning:   ‘std::vector<char> ColumnWriter<int>::buffer’ [-Wreorder]
  138 |     std::vector<char> buffer;
      |                       ^~~~~~
ingest.cpp:107:14: warning:   when initialized here [-Wreorder]
  107 |     explicit ColumnWriter(const std::string& filename, size_t buffer_size = 1024 * 1024)
      |              ^~~~~~~~~~~~
ingest.cpp: In instantiation of ‘ColumnWriter<T>::ColumnWriter(const string&, size_t) [with T = long int; std::string = std::__cxx11::basic_string<char>; size_t = long unsigned int]’:
ingest.cpp:156:77:   required from here
ingest.cpp:139:12: warning: ‘ColumnWriter<long int>::buffer_size’ will be initialized after [-Wreorder]
  139 |     size_t buffer_size;
      |            ^~~~~~~~~~~
ingest.cpp:138:23: warning:   ‘std::vector<char> ColumnWriter<long int>::buffer’ [-Wreorder]
  138 |     std::vector<char> buffer;
      |                       ^~~~~~
ingest.cpp:107:14: warning:   when initialized here [-Wreorder]
  107 |     explicit ColumnWriter(const std::string& filename, size_t buffer_size = 1024 * 1024)
      |              ^~~~~~~~~~~~
make: *** [Makefile:9: ingest] Error 1
